[package]
name = "gpx-stamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
euclid = "0.22.9"
itertools = "0.11.0"
geoutils = "0.5.1"
gpx = "0.9.1"
phf = { version = "0.11", features = ["macros"] }
svg = "0.13.1"
time = "0.3.30"
